udf_parser.output
Terminals unused in grammar

    tPRIVATE


State 18 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 67 conflicts: 3 shift/reduce
State 100 conflicts: 3 shift/reduce
State 132 conflicts: 3 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: declarations

    2 declarations: declaration
    3             | declarations declaration

    4 declaration: variable_decl ';'
    5            | function_decl
    6            | function_def

    7 qualifier_opt: ε
    8              | tPUBLIC
    9              | tFORWARD

   10 type: tINT
   11     | tREAL
   12     | tSTRING_TYPE
   13     | tVOID
   14     | tAUTO
   15     | tPTR '<' type '>'
   16     | tTENSOR '<' tensor_dims '>'

   17 tensor_dims: tINTEGER
   18            | tensor_dims ',' tINTEGER

   19 reshape_dims: tINTEGER
   20             | reshape_dims ',' tINTEGER

   21 variable_decl: qualifier_opt type tIDENTIFIER '=' expr
   22              | qualifier_opt type tIDENTIFIER
   23              | qualifier_opt tAUTO tIDENTIFIER '=' expr

   24 vardecs: variable_decl ';'
   25        | vardecs variable_decl ';'

   26 opt_vardecs: ε
   27            | vardecs

   28 function_decl: qualifier_opt type tIDENTIFIER '(' parameters ')'
   29              | qualifier_opt type tIDENTIFIER '(' ')'

   30 function_def: qualifier_opt type tIDENTIFIER '(' parameters ')' block
   31             | qualifier_opt type tIDENTIFIER '(' ')' block

   32 parameters: variable_decl
   33           | parameters ',' variable_decl

   34 opt_instructions: ε
   35                 | stmts

   36 block: '{' opt_vardecs opt_instructions '}'

   37 stmts: stmt
   38      | stmts stmt

   39 stmt: expr ';'
   40     | tWRITE exprs ';'
   41     | tWRITELN exprs ';'
   42     | tBREAK
   43     | tCONTINUE
   44     | return
   45     | tIF '(' expr ')' stmt
   46     | tIF '(' expr ')' stmt elif_chain
   47     | tFOR '(' opt_forinit ';' exprs_opt ';' exprs_opt ')' stmt
   48     | block

   49 return: tRETURN ';'
   50       | tRETURN expr ';'

   51 elif_chain: tELIF '(' expr ')' stmt
   52           | tELIF '(' expr ')' stmt elif_chain
   53           | tELSE stmt

   54 exprs: expr
   55      | exprs ',' expr
   56      | exprs expr

   57 exprs_opt: ε
   58          | exprs

   59 expr: literal
   60     | lval
   61     | lval '=' expr
   62     | tINPUT
   63     | tNULLPTR
   64     | tOBJECTS '(' expr ')'
   65     | tSIZEOF '(' expr ')'
   66     | '+' expr
   67     | '-' expr
   68     | '~' expr
   69     | lval '?'
   70     | expr '+' expr
   71     | expr '-' expr
   72     | expr '*' expr
   73     | expr '/' expr
   74     | expr '%' expr
   75     | expr tCONTRACT expr
   76     | expr '<' expr
   77     | expr '>' expr
   78     | expr tLE expr
   79     | expr tGE expr
   80     | expr tEQ expr
   81     | expr tAND expr
   82     | expr tOR expr
   83     | expr tNE expr
   84     | '(' expr ')'
   85     | tIDENTIFIER '(' exprs ')'
   86     | tIDENTIFIER '(' ')'
   87     | expr '.' tCAPACITY
   88     | expr '.' tRANK
   89     | expr '.' tDIMS
   90     | expr '.' tDIM '(' expr ')'
   91     | expr '.' tRESHAPE '(' reshape_dims ')'
   92     | tensor_literal

   93 literal: tINTEGER
   94        | tDOUBLE
   95        | string

   96 fordec: type tIDENTIFIER '=' expr

   97 fordecs: fordec
   98        | fordecs ',' fordec

   99 opt_forinit: ε
  100            | fordecs
  101            | tAUTO tIDENTIFIER '=' expr
  102            | exprs

  103 string: tSTRING
  104       | string tSTRING

  105 tensor_literal: '[' exprs ']'

  106 lval: tIDENTIFIER
  107     | expr '[' expr ']'
  108     | expr '@' '(' exprs ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 74
    '(' (40) 28 29 30 31 45 46 47 51 52 64 65 84 85 86 90 91 108
    ')' (41) 28 29 30 31 45 46 47 51 52 64 65 84 85 86 90 91 108
    '*' (42) 72
    '+' (43) 66 70
    ',' (44) 18 20 33 55 98
    '-' (45) 67 71
    '.' (46) 87 88 89 90 91
    '/' (47) 73
    ';' (59) 4 24 25 39 40 41 47 49 50
    '<' (60) 15 16 76
    '=' (61) 21 23 61 96 101
    '>' (62) 15 16 77
    '?' (63) 69
    '@' (64) 108
    '[' (91) 105 107
    ']' (93) 105 107
    '{' (123) 36
    '}' (125) 36
    '~' (126) 68
    error (256)
    tINTEGER <i> (258) 17 18 19 20 93
    tDOUBLE <d> (259) 94
    tIDENTIFIER <s> (260) 21 22 23 28 29 30 31 85 86 96 101 106
    tSTRING <s> (261) 103 104
    tINT (262) 10
    tREAL (263) 11
    tSTRING_TYPE (264) 12
    tTENSOR (265) 16
    tPTR (266) 15
    tVOID (267) 13
    tAUTO (268) 14 23 101
    tPUBLIC (269) 8
    tFORWARD (270) 9
    tPRIVATE (271)
    tIF (272) 45 46
    tELIF (273) 51 52
    tELSE (274) 53
    tFOR (275) 47
    tBREAK (276) 42
    tCONTINUE (277) 43
    tRETURN (278) 49 50
    tWRITE (279) 40
    tWRITELN (280) 41
    tINPUT (281) 62
    tNULLPTR (282) 63
    tOBJECTS (283) 64
    tSIZEOF (284) 65
    tCAPACITY (285) 87
    tRANK (286) 88
    tDIMS (287) 89
    tDIM (288) 90
    tRESHAPE (289) 91
    tCONTRACT (290) 75
    tGE (291) 79
    tLE (292) 78
    tEQ (293) 80
    tNE (294) 83
    tIFX (295)
    tOR (296) 82
    tAND (297) 81
    tUNARY (298)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    file (65)
        on left: 1
        on right: 0
    declarations <sequence> (66)
        on left: 2 3
        on right: 1 3
    declaration <node> (67)
        on left: 4 5 6
        on right: 2 3
    qualifier_opt <qualifier_val> (68)
        on left: 7 8 9
        on right: 21 22 23 28 29 30 31
    type <type> (69)
        on left: 10 11 12 13 14 15 16
        on right: 15 21 22 28 29 30 31 96
    tensor_dims <sequence> (70)
        on left: 17 18
        on right: 16 18
    reshape_dims <sequence> (71)
        on left: 19 20
        on right: 20 91
    variable_decl <node> (72)
        on left: 21 22 23
        on right: 4 24 25 32 33
    vardecs <sequence> (73)
        on left: 24 25
        on right: 25 27
    opt_vardecs <sequence> (74)
        on left: 26 27
        on right: 36
    function_decl <node> (75)
        on left: 28 29
        on right: 5
    function_def <node> (76)
        on left: 30 31
        on right: 6
    parameters <sequence> (77)
        on left: 32 33
        on right: 28 30 33
    opt_instructions <sequence> (78)
        on left: 34 35
        on right: 36
    block <block> (79)
        on left: 36
        on right: 30 31 48
    stmts <sequence> (80)
        on left: 37 38
        on right: 35 38
    stmt <node> (81)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 37 38 45 46 47 51 52 53
    return <node> (82)
        on left: 49 50
        on right: 44
    elif_chain <node> (83)
        on left: 51 52 53
        on right: 46 52
    exprs <sequence> (84)
        on left: 54 55 56
        on right: 40 41 55 56 58 85 102 105 108
    exprs_opt <sequence> (85)
        on left: 57 58
        on right: 47
    expr <expression> (86)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 21 23 39 45 46 50 51 52 54 55 56 61 64 65 66 67 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 87 88 89 90 91 96 101 107 108
    literal <expression> (87)
        on left: 93 94 95
        on right: 59
    fordec <node> (88)
        on left: 96
        on right: 97 98
    fordecs <sequence> (89)
        on left: 97 98
        on right: 98 100
    opt_forinit <sequence> (90)
        on left: 99 100 101 102
        on right: 47
    string <s> (91)
        on left: 103 104
        on right: 95 104
    tensor_literal <expression> (92)
        on left: 105
        on right: 92
    lval <lvalue> (93)
        on left: 106 107 108
        on right: 60 61 69


State 0

    0 $accept: • file $end

    tPUBLIC   shift, and go to state 1
    tFORWARD  shift, and go to state 2

    $default  reduce using rule 7 (qualifier_opt)

    file           go to state 3
    declarations   go to state 4
    declaration    go to state 5
    qualifier_opt  go to state 6
    variable_decl  go to state 7
    function_decl  go to state 8
    function_def   go to state 9


State 1

    8 qualifier_opt: tPUBLIC •

    $default  reduce using rule 8 (qualifier_opt)


State 2

    9 qualifier_opt: tFORWARD •

    $default  reduce using rule 9 (qualifier_opt)


State 3

    0 $accept: file • $end

    $end  shift, and go to state 10


State 4

    1 file: declarations •
    3 declarations: declarations • declaration

    tPUBLIC   shift, and go to state 1
    tFORWARD  shift, and go to state 2

    $end      reduce using rule 1 (file)
    $default  reduce using rule 7 (qualifier_opt)

    declaration    go to state 11
    qualifier_opt  go to state 6
    variable_decl  go to state 7
    function_decl  go to state 8
    function_def   go to state 9


State 5

    2 declarations: declaration •

    $default  reduce using rule 2 (declarations)


State 6

   21 variable_decl: qualifier_opt • type tIDENTIFIER '=' expr
   22              | qualifier_opt • type tIDENTIFIER
   23              | qualifier_opt • tAUTO tIDENTIFIER '=' expr
   28 function_decl: qualifier_opt • type tIDENTIFIER '(' parameters ')'
   29              | qualifier_opt • type tIDENTIFIER '(' ')'
   30 function_def: qualifier_opt • type tIDENTIFIER '(' parameters ')' block
   31             | qualifier_opt • type tIDENTIFIER '(' ')' block

    tINT          shift, and go to state 12
    tREAL         shift, and go to state 13
    tSTRING_TYPE  shift, and go to state 14
    tTENSOR       shift, and go to state 15
    tPTR          shift, and go to state 16
    tVOID         shift, and go to state 17
    tAUTO         shift, and go to state 18

    type  go to state 19


State 7

    4 declaration: variable_decl • ';'

    ';'  shift, and go to state 20


State 8

    5 declaration: function_decl •

    $default  reduce using rule 5 (declaration)


State 9

    6 declaration: function_def •

    $default  reduce using rule 6 (declaration)


State 10

    0 $accept: file $end •

    $default  accept


State 11

    3 declarations: declarations declaration •

    $default  reduce using rule 3 (declarations)


State 12

   10 type: tINT •

    $default  reduce using rule 10 (type)


State 13

   11 type: tREAL •

    $default  reduce using rule 11 (type)


State 14

   12 type: tSTRING_TYPE •

    $default  reduce using rule 12 (type)


State 15

   16 type: tTENSOR • '<' tensor_dims '>'

    '<'  shift, and go to state 21


State 16

   15 type: tPTR • '<' type '>'

    '<'  shift, and go to state 22


State 17

   13 type: tVOID •

    $default  reduce using rule 13 (type)


State 18

   14 type: tAUTO •
   23 variable_decl: qualifier_opt tAUTO • tIDENTIFIER '=' expr

    tIDENTIFIER  shift, and go to state 23

    tIDENTIFIER  [reduce using rule 14 (type)]


State 19

   21 variable_decl: qualifier_opt type • tIDENTIFIER '=' expr
   22              | qualifier_opt type • tIDENTIFIER
   28 function_decl: qualifier_opt type • tIDENTIFIER '(' parameters ')'
   29              | qualifier_opt type • tIDENTIFIER '(' ')'
   30 function_def: qualifier_opt type • tIDENTIFIER '(' parameters ')' block
   31             | qualifier_opt type • tIDENTIFIER '(' ')' block

    tIDENTIFIER  shift, and go to state 24


State 20

    4 declaration: variable_decl ';' •

    $default  reduce using rule 4 (declaration)


State 21

   16 type: tTENSOR '<' • tensor_dims '>'

    tINTEGER  shift, and go to state 25

    tensor_dims  go to state 26


State 22

   15 type: tPTR '<' • type '>'

    tINT          shift, and go to state 12
    tREAL         shift, and go to state 13
    tSTRING_TYPE  shift, and go to state 14
    tTENSOR       shift, and go to state 15
    tPTR          shift, and go to state 16
    tVOID         shift, and go to state 17
    tAUTO         shift, and go to state 27

    type  go to state 28


State 23

   23 variable_decl: qualifier_opt tAUTO tIDENTIFIER • '=' expr

    '='  shift, and go to state 29


State 24

   21 variable_decl: qualifier_opt type tIDENTIFIER • '=' expr
   22              | qualifier_opt type tIDENTIFIER •
   28 function_decl: qualifier_opt type tIDENTIFIER • '(' parameters ')'
   29              | qualifier_opt type tIDENTIFIER • '(' ')'
   30 function_def: qualifier_opt type tIDENTIFIER • '(' parameters ')' block
   31             | qualifier_opt type tIDENTIFIER • '(' ')' block

    '='  shift, and go to state 30
    '('  shift, and go to state 31

    $default  reduce using rule 22 (variable_decl)


State 25

   17 tensor_dims: tINTEGER •

    $default  reduce using rule 17 (tensor_dims)


State 26

   16 type: tTENSOR '<' tensor_dims • '>'
   18 tensor_dims: tensor_dims • ',' tINTEGER

    '>'  shift, and go to state 32
    ','  shift, and go to state 33


State 27

   14 type: tAUTO •

    $default  reduce using rule 14 (type)


State 28

   15 type: tPTR '<' type • '>'

    '>'  shift, and go to state 34


State 29

   23 variable_decl: qualifier_opt tAUTO tIDENTIFIER '=' • expr

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 48
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 30

   21 variable_decl: qualifier_opt type tIDENTIFIER '=' • expr

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 53
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 31

   28 function_decl: qualifier_opt type tIDENTIFIER '(' • parameters ')'
   29              | qualifier_opt type tIDENTIFIER '(' • ')'
   30 function_def: qualifier_opt type tIDENTIFIER '(' • parameters ')' block
   31             | qualifier_opt type tIDENTIFIER '(' • ')' block

    tPUBLIC   shift, and go to state 1
    tFORWARD  shift, and go to state 2
    ')'       shift, and go to state 54

    $default  reduce using rule 7 (qualifier_opt)

    qualifier_opt  go to state 55
    variable_decl  go to state 56
    parameters     go to state 57


State 32

   16 type: tTENSOR '<' tensor_dims '>' •

    $default  reduce using rule 16 (type)


State 33

   18 tensor_dims: tensor_dims ',' • tINTEGER

    tINTEGER  shift, and go to state 58


State 34

   15 type: tPTR '<' type '>' •

    $default  reduce using rule 15 (type)


State 35

   93 literal: tINTEGER •

    $default  reduce using rule 93 (literal)


State 36

   94 literal: tDOUBLE •

    $default  reduce using rule 94 (literal)


State 37

   85 expr: tIDENTIFIER • '(' exprs ')'
   86     | tIDENTIFIER • '(' ')'
  106 lval: tIDENTIFIER •

    '('  shift, and go to state 59

    '('       [reduce using rule 106 (lval)]
    $default  reduce using rule 106 (lval)


State 38

  103 string: tSTRING •

    $default  reduce using rule 103 (string)


State 39

   62 expr: tINPUT •

    $default  reduce using rule 62 (expr)


State 40

   63 expr: tNULLPTR •

    $default  reduce using rule 63 (expr)


State 41

   64 expr: tOBJECTS • '(' expr ')'

    '('  shift, and go to state 60


State 42

   65 expr: tSIZEOF • '(' expr ')'

    '('  shift, and go to state 61


State 43

   68 expr: '~' • expr

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 62
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 44

   66 expr: '+' • expr

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 63
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 45

   67 expr: '-' • expr

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 64
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 46

   84 expr: '(' • expr ')'

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    expr            go to state 65
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 47

  105 tensor_literal: '[' • exprs ']'

    tINTEGER     shift, and go to state 35
    tDOUBLE      shift, and go to state 36
    tIDENTIFIER  shift, and go to state 37
    tSTRING      shift, and go to state 38
    tINPUT       shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tOBJECTS     shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 47

    exprs           go to state 66
    expr            go to state 67
    literal         go to state 49
    string          go to state 50
    tensor_literal  go to state 51
    lval            go to state 52


State 48
